feat: integrate real-time AI Copilot assistant with RAG
- Implement RAG pipeline: Embedding (text-embedding-3-small) + Vector DB (Pinecone).
- Integrate with LLM (GPT-4) for context-aware response generation.
- Add WebSocket streaming for real-time consultation.
- Add UI widget (floating chat button) and response display component.
- Implement caching layer to reduce latency and token cost.

Why:
Enable users to get instant, contextually-accurate answers from internal knowledge base,
reducing manual search time by ~30% and improving decision-making speed.